updated notes and began homework 5, written assignment